--- a/A1/Lsg/res/style/main.css
+++ b/A1/Lsg/res/style/main.css
@@ -57,7 +57,7 @@ a.header_link:hover{
   border-left: thin solid lightgray;
     -moz-transition: background 0.7s;
   -webkit-transition: background 0.7s;
-  
+
 }
 
 .header_element:hover{
@@ -69,7 +69,7 @@ h1.main_caption{
    margin: 40px 5px 30px;
   font-size: 35px;
   font-weight: normal;
-  
+
 }
 
 /* Text section with green border*/
@@ -77,7 +77,7 @@ section.green_boxed_text_section{
   margin-left: 5px;
   margin-right: 5px;
   background-color: #F8F8F8;
-  border: thin solid green; 
+  border: thin solid green;
   box-shadow: 3px 5px 2px lightgrey;
   padding: 10px 8px 10px;
 }
@@ -100,7 +100,7 @@ button.hide_column_button:hover{
 }
 
 div.data_table_container{
-    margin: 20px 5px 20px;  
+    margin: 20px 5px 20px;
 }
 
 div.show_hide_buttons{
@@ -114,7 +114,14 @@ table.data_table{
 }
 
 table.data_table thead{
-  background: lightgray;
+  text-align: left;
+  background: white;
+  border-bottom: medium solid lightgray;
 }
 
+table.data_table tbody:before{
+  line-height:1em; 
+  content:"\200C"; 
+  display:block;
+}
 
