--- a/A2/Lsg/res/style/main.css
+++ b/A2/Lsg/res/style/main.css
@@ -80,7 +80,7 @@ a.header_link:hover{
 
 /* Main document caption */
 h1.main_caption{
-   margin: 40px 5px 30px;
+   margin: 100px 5px 30px 5px;
   font-size: 35px;
   font-weight: normal;
 
@@ -129,6 +129,11 @@ button.hide_column_button:hover{
 
 div.data_table_container{
     margin: 20px 5px 20px;
+}
+
+/* Container for the xsl generated table */
+div.data_table_container_2{
+	margin: 100px 5px 20px 5px;
 }
 
 div.show_hide_buttons{
